--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 fastapi[standard]==0.115.8
 uvicorn[standard]==0.34.0
+email-validator==2.2.0
+PyJWT==2.10.1
+passlib[bcrypt]==1.7.4
+sqlmodel==0.0.24
