--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,24 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
-            "name": "main.py : FastAPI",
+            "name": "Python Debugger: FastAPI",
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
             "args": [
                 "main:app",
+                "--reload"
+            ],
+            "jinja": true
+        },
+        {
+            "name": "app.main.py : FastAPI",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "uvicorn",
+            "args": [
+                "app.main:app",
                 "--reload"
             ],
             "jinja": true
