--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: FastAPI",
+            "name": "Current File",
             "type": "debugpy",
             "request": "launch",
-            "module": "uvicorn",
-            "args": [
-                "main:app",
-                "--reload"
-            ],
-            "jinja": true
+            "program": "${file}",
+            "console": "integratedTerminal"
         },
         {
             "name": "app.main.py : FastAPI",
